extends Node
## èŠ‚æ‹ç®¡ç†å™¨ - æ ¹æ® BPM å’Œ offset æ£€æµ‹éŸ³ä¹èŠ‚æ‹

signal beat_hit(beat_number: float, note: Note)

# éŸ³ä¹é…ç½®
@export var bpm: float = 128.0  # æ¯åˆ†é’ŸèŠ‚æ‹æ•°
@export var offset: float = 0.0  # åç§»é‡ï¼ˆç§’ï¼‰
@export var generate_test_chart: bool = true  # æ˜¯å¦ç”Ÿæˆæµ‹è¯•é“ºé¢
@export var chart_resource: Chart = null  # è‡ªå®šä¹‰é“ºé¢èµ„æºï¼ˆæ‹–å…¥ .tres æ–‡ä»¶ï¼‰
@export_file("*.json") var chart_json_path: String = ""  # JSON é“ºé¢æ–‡ä»¶è·¯å¾„
@export_file("*.sm") var chart_sm_path: String = ""  # StepMania .sm é“ºé¢æ–‡ä»¶è·¯å¾„

# ç”¨æˆ·æ ¡å‡†çš„å…¨å±€å»¶è¿Ÿï¼ˆç§’ï¼‰ï¼Œä¼šå åŠ åˆ°æ‰€æœ‰é“ºé¢çš„offsetä¸Š
@export var user_offset: float = 0.0  # å¯åœ¨ç¼–è¾‘å™¨ä¸­é…ç½®æµ‹è¯•ï¼Œæ­£å¼è¿è¡Œæ—¶ä»é…ç½®æ–‡ä»¶åŠ è½½

# é“ºé¢æ•°æ®
var current_chart: Chart = null

# å†…éƒ¨å˜é‡
var beat_interval: float = 0.0  # æ¯ä¸ªèŠ‚æ‹çš„æ—¶é—´é—´éš”ï¼ˆç§’ï¼‰
var next_beat_time: float = 0.0  # ä¸‹ä¸€ä¸ªèŠ‚æ‹çš„æ—¶é—´
var current_beat: float = 0.0  # å½“å‰èŠ‚æ‹æ•°ï¼ˆæ”¯æŒæµ®ç‚¹æ•°ä»¥ç²¾ç¡®è·Ÿè¸ªèŠ‚æ‹ï¼‰
var is_playing: bool = false
var is_paused: bool = false  # æ˜¯å¦æš‚åœ
var pause_start_time: float = 0.0  # æš‚åœå¼€å§‹æ—¶é—´
var total_pause_duration: float = 0.0  # ç´¯è®¡æš‚åœæ—¶é•¿

@onready var music_player: AudioStreamPlayer = get_node("../MusicPlayer")


func load_user_offset() -> void:
	"""åŠ è½½ç”¨æˆ·æ ¡å‡†çš„éŸ³é¢‘å»¶è¿Ÿè®¾ç½®"""
	# å¦‚æœåœ¨ç¼–è¾‘å™¨ä¸­å·²è®¾ç½®user_offsetï¼Œä¼˜å…ˆä½¿ç”¨ç¼–è¾‘å™¨çš„å€¼ï¼ˆä¾¿äºæµ‹è¯•ï¼‰
	if user_offset != 0.0:
		print("ä½¿ç”¨ç¼–è¾‘å™¨è®¾ç½®çš„ç”¨æˆ·å»¶è¿Ÿ: ", user_offset, " ç§’ (", user_offset * 1000.0, " ms)")
		return
	
	# å¦åˆ™ä»é…ç½®æ–‡ä»¶åŠ è½½
	var config := ConfigFile.new()
	var err := config.load("user://settings.cfg")
	if err == OK:
		var user_offset_ms: float = config.get_value("audio", "offset", 0.0)
		# å°†æ¯«ç§’è½¬æ¢ä¸ºç§’
		user_offset = user_offset_ms / 1000.0
		print("å·²åŠ è½½ç”¨æˆ·æ ¡å‡†å»¶è¿Ÿ: ", user_offset_ms, " ms (", user_offset, " ç§’)")


func _ready() -> void:
	# åŠ è½½ç”¨æˆ·æ ¡å‡†çš„å»¶è¿Ÿè®¾ç½®
	load_user_offset()
	
	# è®¡ç®—èŠ‚æ‹é—´éš”
	beat_interval = 60.0 / bpm
	
	# è¿æ¥éŸ³ä¹æ’­æ”¾å™¨ä¿¡å·
	if music_player:
		music_player.music_started.connect(_on_music_started)
		print("BeatManager å·²è¿æ¥åˆ° MusicPlayer")
	else:
		push_error("æ‰¾ä¸åˆ° MusicPlayer èŠ‚ç‚¹")


func _process(delta: float) -> void:
	if not is_playing or is_paused:
		return
	
	# è·å–å½“å‰éŸ³ä¹æ’­æ”¾ä½ç½®ï¼ˆåŠ ä¸ŠéŸ³é¢‘å»¶è¿Ÿè¡¥å¿ï¼‰
	var current_time: float = music_player.get_playback_position() + AudioServer.get_time_to_next_mix()
	
	# æ£€æŸ¥æ˜¯å¦åˆ°è¾¾ä¸‹ä¸€ä¸ªèŠ‚æ‹
	if current_time >= next_beat_time:
		_on_beat()
		# è®¡ç®—ä¸‹ä¸€ä¸ªèŠ‚æ‹æ—¶é—´
		next_beat_time += beat_interval


## éŸ³ä¹å¼€å§‹æ’­æ”¾æ—¶çš„å›è°ƒ
func _on_music_started() -> void:
	is_playing = true
	current_beat = 0.0
	
	# åŠ è½½é“ºé¢ï¼ˆä¼˜å…ˆçº§ï¼šSM > JSON > Resource > æµ‹è¯•ç”Ÿæˆï¼‰
	if chart_sm_path != "":
		current_chart = SMFileLoader.load_from_sm(chart_sm_path)
		if current_chart:
			# ä»é“ºé¢ä¸­è¯»å–é…ç½®
			bpm = current_chart.bpm
			var original_offset := current_chart.offset
			offset = original_offset + user_offset  # å åŠ ç”¨æˆ·æ ¡å‡†å»¶è¿Ÿ
			beat_interval = 60.0 / bpm
			# é‡æ–°è®¡ç®—æ‰€æœ‰éŸ³ç¬¦çš„beat_time
			_recalculate_note_times(current_chart, original_offset, offset)
			print("SMé“ºé¢offset: ", original_offset, " + ç”¨æˆ·offset: ", user_offset, " = æ€»offset: ", offset)
	elif chart_json_path != "":
		current_chart = ChartLoader.load_from_json(chart_json_path)
		if current_chart:
			# ä»é“ºé¢ä¸­è¯»å–é…ç½®
			bpm = current_chart.bpm
			var original_offset := current_chart.offset
			offset = original_offset + user_offset  # å åŠ ç”¨æˆ·æ ¡å‡†å»¶è¿Ÿ
			beat_interval = 60.0 / bpm
			# é‡æ–°è®¡ç®—æ‰€æœ‰éŸ³ç¬¦çš„beat_time
			_recalculate_note_times(current_chart, original_offset, offset)
			print("JSONé“ºé¢offset: ", original_offset, " + ç”¨æˆ·offset: ", user_offset, " = æ€»offset: ", offset)
	elif chart_resource:
		current_chart = chart_resource
		# ä»é“ºé¢èµ„æºä¸­è¯»å–é…ç½®
		bpm = current_chart.bpm
		var original_offset := current_chart.offset
		offset = original_offset + user_offset  # å åŠ ç”¨æˆ·æ ¡å‡†å»¶è¿Ÿ
		# é‡æ–°è®¡ç®—èŠ‚æ‹é—´éš”
		beat_interval = 60.0 / bpm
		# é‡æ–°è®¡ç®—æ‰€æœ‰éŸ³ç¬¦çš„beat_time
		_recalculate_note_times(current_chart, original_offset, offset)
		print("å·²åŠ è½½è‡ªå®šä¹‰é“ºé¢: ", current_chart.chart_name, "ï¼Œå…± ", current_chart.notes.size(), " ä¸ªéŸ³ç¬¦")
		print("é“ºé¢offset: ", original_offset, " + ç”¨æˆ·offset: ", user_offset, " = æ€»offset: ", offset)
	elif generate_test_chart:
		# å…ˆåº”ç”¨ç”¨æˆ·æ ¡å‡†å»¶è¿Ÿ
		offset += user_offset
		# å†ç”Ÿæˆæµ‹è¯•é“ºé¢ï¼ˆè¿™æ ·beat_timeæ‰èƒ½ä½¿ç”¨æ­£ç¡®çš„offsetï¼‰
		_generate_test_chart()
		print("æµ‹è¯•é“ºé¢ + ç”¨æˆ·offset: ", user_offset, " = æ€»offset: ", offset)
	
	# é€šçŸ¥ TrackManager
	if current_chart:
		var track_manager = get_node("../TrackManager")
		if track_manager:
			track_manager.set_chart(current_chart)
	
	next_beat_time = offset
	print("èŠ‚æ‹ç®¡ç†å™¨å·²å¯åŠ¨ - BPM: ", bpm, ", Offset: ", offset, " ç§’")


func _recalculate_note_times(chart: Chart, old_offset: float, new_offset: float) -> void:
	"""é‡æ–°è®¡ç®—é“ºé¢ä¸­æ‰€æœ‰éŸ³ç¬¦çš„beat_timeï¼Œåº”ç”¨æ–°çš„offset"""
	var offset_diff := new_offset - old_offset
	for note in chart.notes:
		note.beat_time += offset_diff
	print("å·²é‡æ–°è®¡ç®— ", chart.notes.size(), " ä¸ªéŸ³ç¬¦çš„æ—¶é—´ï¼Œå»¶è¿Ÿè°ƒæ•´: ", offset_diff, " ç§’")


## ç”Ÿæˆæµ‹è¯•é“ºé¢ï¼ˆéšæœºç”ŸæˆéŸ³ç¬¦ï¼‰
func _generate_test_chart() -> void:
	current_chart = Chart.new()
	current_chart.chart_name = "Test Chart"
	current_chart.bpm = bpm
	current_chart.offset = offset
	
	# ç”Ÿæˆå‰100ä¸ªèŠ‚æ‹çš„éšæœºéŸ³ç¬¦
	for i in range(1, 101):
		var note := Note.new()
		note.beat_number = float(i)  # ä½¿ç”¨æµ®ç‚¹æ•°ï¼Œä»1å¼€å§‹
		note.beat_time = offset + i * beat_interval  # ç¬¬iæ‹çš„æ—¶é—´
		# éšæœºé€‰æ‹©éŸ³ç¬¦ç±»å‹
		note.type = randi() % 3 as Note.NoteType
		current_chart.add_note(note)
	
	print("å·²ç”Ÿæˆæµ‹è¯•é“ºé¢ï¼Œå…± ", current_chart.notes.size(), " ä¸ªéŸ³ç¬¦")


## èŠ‚æ‹è§¦å‘æ—¶çš„å›è°ƒ
func _on_beat() -> void:
	current_beat += 1.0  # ä½¿ç”¨æµ®ç‚¹æ•°ï¼Œé€’å¢åˆ°ä¸‹ä¸€æ‹
	
	# è·å–å½“å‰èŠ‚æ‹çš„éŸ³ç¬¦
	var note: Note = null
	if current_chart:
		note = current_chart.get_note_at_beat(current_beat)
	
	# æ‰“å°èŠ‚æ‹ä¿¡æ¯å’ŒéŸ³ç¬¦ç±»å‹
	if note:
		var note_icon := _get_note_icon(note.type)
		print("â™ª èŠ‚æ‹ #", current_beat, " - æ—¶é—´: ", "%.3f" % next_beat_time, " ç§’ - éŸ³ç¬¦: ", note_icon, " ", note.get_type_string())
	else:
		print("â™ª èŠ‚æ‹ #", current_beat, " - æ—¶é—´: ", "%.3f" % next_beat_time, " ç§’ - æ— éŸ³ç¬¦")
	
	beat_hit.emit(current_beat, note)


## è·å–éŸ³ç¬¦ç±»å‹å¯¹åº”çš„å›¾æ ‡
func _get_note_icon(type: Note.NoteType) -> String:
	match type:
		Note.NoteType.HIT:
			return "âš”ï¸"  # æ”»å‡»
		Note.NoteType.GUARD:
			return "ğŸ›¡ï¸"  # é˜²å¾¡
		Note.NoteType.DODGE:
			return "ğŸ’¨"  # é—ªé¿
		_:
			return "â“"


## æš‚åœèŠ‚æ‹æ£€æµ‹
func pause_beat_detection() -> void:
	is_paused = true
	print("èŠ‚æ‹æ£€æµ‹å·²æš‚åœ")


## æ¢å¤èŠ‚æ‹æ£€æµ‹
func resume_beat_detection() -> void:
	is_paused = false
	print("èŠ‚æ‹æ£€æµ‹å·²æ¢å¤")
